@@ -489,3 +489,6 @@ Lintian-Tags: debian-rules-parses-dpkg-parsechangelog
 
 Fix-Script: field-name-typo-in-control.py
 Lintian-Tags: cute-field
+
+Fix-Script: pkg-js-tools-test-is-missing.py
+Lintian-Tags: pkg-js-tools-test-is-missing
