@@ -1,0 +1,3 @@
+test('get the gzipped size', async t => {
+	t.true(await gzipSize(fixture) < fixture.length);
+});
