@@ -1,0 +1,2 @@
+Add autopkgtest for node.
+Fixed-Lintian-Tags: pkg-js-tools-test-is-missing
